@@ -1,5 +1,7 @@
-2025-08-XX   3.6.2:
+2025-08-XX   3.7.0:
 -------------------
+  * add `util.gen_primes()`, a function to generate bitarrays in which all
+    active indices are prime numbers
 
 
 2025-08-12   3.6.1:
